; ModuleID = '/home/carl/AnghaBench/php-src/ext/fileinfo/libmagic/extr_funcs.c_file_printedlen.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/fileinfo/libmagic/extr_funcs.c_file_printedlen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.magic_set = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @file_printedlen(%struct.magic_set* %0) #0 {
  %2 = alloca %struct.magic_set*, align 8
  store %struct.magic_set* %0, %struct.magic_set** %2, align 8
  %3 = load %struct.magic_set*, %struct.magic_set** %2, align 8
  %4 = getelementptr inbounds %struct.magic_set, %struct.magic_set* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %15

9:                                                ; preds = %1
  %10 = load %struct.magic_set*, %struct.magic_set** %2, align 8
  %11 = getelementptr inbounds %struct.magic_set, %struct.magic_set* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = call i64 @strlen(i32* %13)
  br label %15

15:                                               ; preds = %9, %8
  %16 = phi i64 [ 0, %8 ], [ %14, %9 ]
  ret i64 %16
}

declare dso_local i64 @strlen(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
